change Carcontroller logic